# price_checker

./: .gitignore  prices.db  pyproject.toml
data/: prices.csv  prices.db  prices2.csv  prices_test.csv
src/price_checker/: config.py  http_parser.py  logging_config.py  main.py  models.py  parser.py  pipeline.py  pricing.py  storage.py
tests/: test_http_parser.py  test_main.py  test_parser.py  test_pricing.py  test_storage.py
